<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!--android:layout_width="wrap_content" to get right width -->
    <Button
        android:id="@+id/btnLeveling"
        style="@style/Button.Default"
        android:layout_width="250dp"
        android:layout_height="@dimen/main_option_height_btn_others"
        android:layout_alignEnd="@+id/btnLevelFive"
        android:layout_alignStart="@+id/btnLevelOne"
        android:text="@string/main_options_label_leveling"
        />

    <!--android:layout_width="wrap_content" to get right width -->
    <Button
        android:id="@+id/btnReinforcement"
        style="@style/Button.Default"
        android:layout_width="250dp"
        android:layout_height="@dimen/main_option_height_btn_others"
        android:layout_alignEnd="@+id/btnLevelFive"
        android:layout_alignStart="@+id/btnLevelOne"
        android:layout_below="@+id/btnLeveling"
        android:layout_marginTop="@dimen/margin_small"
        android:enabled="false"
        android:text="@string/main_options_label_reinforcement"
    />

    <Button
        android:id="@+id/btnLevelOne"
        style="@style/Button.Default"
        android:layout_width="@dimen/main_option_width_btn_level"
        android:layout_height="@dimen/main_option_height_btn_level"
        android:layout_below="@+id/btnReinforcement"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:enabled="false"
        android:text="@string/main_options_label_level_one"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLevelTwo"
        style="@style/Button.Default"
        android:layout_width="@dimen/main_option_width_btn_level"
        android:layout_height="@dimen/main_option_height_btn_level"
        android:layout_below="@+id/btnReinforcement"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_toRightOf="@+id/btnLevelOne"
        android:enabled="false"
        android:text="@string/main_options_label_level_two"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLevelThree"
        style="@style/Button.Default"
        android:layout_width="@dimen/main_option_width_btn_level"
        android:layout_height="@dimen/main_option_height_btn_level"
        android:layout_below="@+id/btnReinforcement"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_toRightOf="@+id/btnLevelTwo"
        android:enabled="false"
        android:text="@string/main_options_label_level_three"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLevelFour"
        style="@style/Button.Default"
        android:layout_width="@dimen/main_option_width_btn_level"
        android:layout_height="@dimen/main_option_height_btn_level"
        android:layout_below="@+id/btnReinforcement"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_toRightOf="@+id/btnLevelThree"
        android:enabled="false"
        android:text="@string/main_options_label_level_four"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLevelFive"
        style="@style/Button.Default"
        android:layout_width="@dimen/main_option_width_btn_level"
        android:layout_height="@dimen/main_option_height_btn_level"
        android:layout_below="@+id/btnReinforcement"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_toRightOf="@+id/btnLevelFour"
        android:enabled="false"
        android:text="@string/main_options_label_level_five"
        android:visibility="gone" />

</RelativeLayout>